<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSecondary"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput"
        style="@style/text_input"
        app:hintTextAppearance="@style/MyHintStyle"
        app:layout_constraintBottom_toTopOf="@+id/data_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/Rounded">

        <EditText
            android:id="@+id/username"
            style="@style/edittext"
            android:hint="@string/device_key"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/data_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinput">

        <TextView
            android:id="@+id/err"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:visibility="gone" />


        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="50dp"
            android:enabled="false"
            android:text="@string/action_sign_in_short" />

        <TextView
            android:id="@+id/nodev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nodevice"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>